# Proyecto-AntiCiberacoso

./: .gitignore  1-proteccion-xss.js  2-proteccion-clickjacking.js  3-proteccion-csp-network.js  4 Transacciones de bancos PARCIAL.xlsx  BloodHound + Neo4j en Kali Linux.docx  Bursp Suite.docx  CTF-AD-MASTER-GUIDE.md  CTF-QUICK-CHEATSHEET.txt  CTF-WINDOWS-ENUM.ps1  CV_Itmar.docx  Chat bot de IA Parcial #3.txt  Ciberseguridad#3 Genymotion.pptx  DL_Malware.pptx  Dockerfile  Escaneo de Dominios con Nmap.pptx  Helix_Incidente_Mythos.pptx  INSTALACION DE PEFS.docx  Informe_BloodHound_Neo4j.docx  Informe_Tecnico_Ciberderecho.docx  Informe_pfSense_Kali_Linux.docx  Investigacion N°2.pptx  Itmar Castillo 8-1027-180.docx  Itmar Castillo OTX Endpoint Security.docx  Laboratorio_SSH.Itmar Castillo.docx  MALWARE C2.docx  MALWARE_C2.docx  Nmap escaneo de dominios.docx  Operacion_Mythos_IR.docx  PARCIAL N°3.xlsx  Parcial 3 ciber 3 parte 1.docx  Parcial_3_ciber_3_parte_1_Informe.docx  SEMESTRAL CIBER 4.docx  SEMESTRAL_CIBER_4_INFORME.docx  SHAIR_SCC-5.14_2026-04-09_195643_Non-Compliance_Microsoft_Windows_11_STIG-002.007.016.html  Sherlock.pptx  TallerDeSeguridad.docx  Taller_Machine_Learning.docx  Tema5_NLP_Discurso_Malicioso.pptx  Trabajo_Machine_Learning.htm  (+19 more)
Nueva carpeta/purple_team/: README.md  __main__.py  pyproject.toml  requirements.txt  setup.py
Nueva carpeta/purple_team/agent/: agent.py  scanner.py
Nueva carpeta/purple_team/api/: rest.py
Nueva carpeta/purple_team/c2/: server.py
Nueva carpeta/purple_team/chatbot/: engine.py
Nueva carpeta/purple_team/configs/: default.json
(+121 files in other folders)
