[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "purple-team"
version = "2.0.0"
description = "Professional Purple Team Cybersecurity Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "requests>=2.28.0",
]
[project.scripts]
purple-team = "purple_team.__main__:main"
